--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,9 +36,8 @@ jobs:
       # 部署到 GitHub Pages
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./docs/.vuepress/dist
-          TARGET_REPO: gaving2016/interviewquestionforjava
+        env:
+          GITHUB_TOKEN: ${{ secrets.INTERVIEWQUESTION }}
+          TARGET_REPO: gaving2016/interviewquestion
           TARGET_BRANCH: gh-pages
 
