--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@vuepress/bundler-webpack": "^2.0.0-rc.15",
+    "@vuepress/theme-default": "^2.0.0-rc.44",
+    "sass": "^1.79.1",
+    "sass-loader": "^16.0.1",
     "vuepress": "^2.0.0-rc.15"
   }
 }
